feat: adding adapter to find address

--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,11 @@ dependencies {
 	implementation 'org.springframework.kafka:spring-kafka'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
+	// https://mvnrepository.com/artifact/org.mapstruct/mapstruct
+	implementation 'org.mapstruct:mapstruct:1.6.0.Beta1'
+
+	// https://mvnrepository.com/artifact/org.mapstruct/mapstruct-processor
+	implementation 'org.mapstruct:mapstruct-processor:1.6.0.Beta1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
 }
