feat: adding controller

--- a/build.gradle
+++ b/build.gradle
@@ -31,11 +31,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	implementation 'org.springframework.kafka:spring-kafka'
-	compileOnly 'org.projectlombok:lombok'
+	// https://mvnrepository.com/artifact/org.projectlombok/lombok
+	compileOnly 'org.projectlombok:lombok:1.18.30'
 	annotationProcessor 'org.projectlombok:lombok'
 	// https://mvnrepository.com/artifact/org.mapstruct/mapstruct
 	implementation 'org.mapstruct:mapstruct:1.6.0.Beta1'
-
 	// https://mvnrepository.com/artifact/org.mapstruct/mapstruct-processor
 	implementation 'org.mapstruct:mapstruct-processor:1.6.0.Beta1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
